# keras-hello-world

./: .gitignore  Basic classification - Classify images of clothing.ipynb  CNN.ipynb  Data augmentation.ipynb  Image classification.ipynb  Image segmentation.ipynb  Load CSV.ipynb  Load images.ipynb  Load pandas.ipynb  Transfer learning and fine-tuning.ipynb  pyproject.toml
test/: saved_model.pb
test/variables/: variables.data-00000-of-00001  variables.index
