[tool.poetry]
name = "keras-hello-world"
version = "0.1.0"
description = ""
authors = ["Samir Azzouz <s.azzouz97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Keras = "^2.4.3"
jupyterlab = "^2.2.9"
tensorflow = "^2.3.1"
pandas = "^1.1.4"
matplotlib = "^3.3.2"
tensorflow-datasets = "^4.1.0"
ipywidgets = "^7.5.1"
pydot = "^1.4.1"
graphviz = "^0.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
